# valencebox

./: .gitattributes  .gitignore  .gitmodules  AGENTS.md  Makefile  README.md
.claude/: launch.json
guest/: Dockerfile
sandbox/: HARDENING.md  PROTOCOL.md  README.md  THIRD_PARTY_LICENSES.md  package-lock.json  package.json  tsconfig.json
sandbox/docs/: PLAN.md  build-from-source.md  data-plane-architecture.md  macos-issues.md  qemu.md  rewrite-in-rust.md  switch-to-v86-fork.md
sandbox/guest/: Dockerfile  Dockerfile.alpine
sandbox/guest/rust-agent/: AGENTS.md  Cargo.toml  Dockerfile  README.md
sandbox/guest/rust-agent/src/: main.rs
sandbox/guest/sync-agent/: dataplane.go  frame.go  go.mod  main.go  manifest.go  state.go  termios.go  transfer.go  watcher.go
sandbox/guest/sync-agent-rust/: .gitignore  Cargo.toml
sandbox/guest/sync-agent-rust/src/: dataplane.rs  frame.rs  logging.rs  main.rs  manifest.rs  pty.rs  state.rs  termios.rs  transfer.rs  watcher.rs
sandbox/resources/qemu/: README.md
sandbox/scripts/: build-guest.sh  build-qemu.sh  copy-renderer.js
sandbox/src/: config.ts
sandbox/src/main/: asset-paths.ts  bridge.ts  data-plane.ts  doh.ts  guest-profile.ts  http-share.ts  main.ts  manifest.ts  preload.ts  (+10 more)
sandbox/test/: boot.test.ts  dataplane.test.ts  e2e.test.ts  fake-preload.js  golden-args.unit.ts  guest-profile.unit.ts  hydrate-channel-switch.unit.ts  manifest.unit.ts  memcheck.adhoc.ts  net.test.ts  qmp.test.ts  snapshot.test.ts  sync.test.ts  ui-smoke.js  util.ts
scripts/: Dockerfile.v86  build-qemu.ps1  build-qemu.sh  build-v86.sh
(+14 files in other folders)
