[package]
name = "agent"
version = "0.1.0"
edition = "2021"

[profile.release]
panic = "abort"
lto = true
codegen-units = 1
strip = "symbols"
opt-level = "z"

[features]
default = ["tls"]
tls = ["ureq/tls"]

[dependencies]
ureq = { version = "2", default-features = false, features = ["json"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
